antes de tablas

--- a/f1_data_parser.ipynb
+++ b/f1_data_parser.ipynb
@@ -162,7 +162,10 @@
     }
    ],
    "source": [
-    "print(df_moodle)"
+    "import joblib\n",
+    "\n",
+    "model=joblib.load(open('./assets/my_model.joblib','rb'))\n",
+    "print(model.feature_names)"
    ]
   },
   {
