--- a/f1_data_parser.ipynb
+++ b/f1_data_parser.ipynb
@@ -2,14 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     course  n_assignment  n_posts  n_read  n_quiz  n_quiz_a  n_quiz_s  \\\n",
+      "0        88             6        0       0       0         0         0   \n",
+      "1        88             7        0       0       0         0         0   \n",
+      "2        88             6        0       0       0         0         0   \n",
+      "3        88             7        0       0       0         0         0   \n",
+      "4        88             7        0       0       0         0         0   \n",
+      "..      ...           ...      ...     ...     ...       ...       ...   \n",
+      "433     218            10        0       0       6         6         0   \n",
+      "434     218            11        0       0       5         5         0   \n",
+      "435     218             0        0       0       0         0         0   \n",
+      "436     218            10        0       0       5         3         2   \n",
+      "437     218            11        1       0       7         6         1   \n",
+      "\n",
+      "     total_time_assignment  total_time_quiz  total_time_forum       mark  \n",
+      "0                     1872                0               404       FAIL  \n",
+      "1                     2163                0                 0       FAIL  \n",
+      "2                     1496                0                51       FAIL  \n",
+      "3                     1386                0               145       GOOD  \n",
+      "4                     2496                0               678  EXCELLENT  \n",
+      "..                     ...              ...               ...        ...  \n",
+      "433                    416             2104              1494       FAIL  \n",
+      "434                   1612             2003              1218       FAIL  \n",
+      "435                     84              354              1306       FAIL  \n",
+      "436                    750             2162               950       PASS  \n",
+      "437                    217             2713                 0       FAIL  \n",
+      "\n",
+      "[438 rows x 11 columns]\n",
+      "<built-in method transpose of numpy.ndarray object at 0x000002BD4E446D50>\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import arff\n",
+    "from sklearn.preprocessing import KBinsDiscretizer\n",
     "\n",
-    "df_moodle=pd.read_csv(\"data/moodle7discretizados.csv\",header=0)"
+    "df=pd.read_csv(\"data/moodle7numericos.csv\",header=0)\n",
+    "print(df)\n",
+    "est=KBinsDiscretizer(n_bins=4,encode='ordinal',strategy='uniform')\n",
+    "Xt=est.fit_transform(df.iloc[:,1:-1])\n",
+    "print(Xt.transpose)"
    ]
   },
   {
